# ScholarMate

./: .gitignore  .windsurfignore  README.md  langgraph.json  main.py  pyproject.toml
DOC/: TODO.md  uv.md  常用命令.md  需求文档.md
DOC/ForLLM/: OpenAlexSearch.md
DOC/ForLLM/langchain/: TavilyCrawl.md  TavilyExtract.md  TavilyMap.md  tools.md
my-app/: pytest.ini  run_tests.sh
my-app/src/: agent.py
my-app/src/config/: __init__.py  config_loader.py  prompts.yaml
my-app/src/models/: README.md  __init__.py  embedding_config.py  llm_config.py
my-app/src/tests/: README.md  conftest.py  test_aggregated_search.py  test_citation_tools.py  test_config_loader.py  test_openalex.py  test_paper_tools.py  test_performance.py  test_semantic_scholar.py  test_tavily_tools.py
my-app/src/tools/: __init__.py  citation_tools.py  paper_tools.py  tavily_tools.py
test/: arxiv.ipynb  embeddingTest.ipynb  test_embeddings.py
