[project]
name = "scholarmate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.3.1",
    "dashscope>=1.25.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langgraph==1.0.2",
    "loguru>=0.7.3",
    "pymupdf>=1.26.6",
    "pytest>=9.0.1",
    "requests>=2.32.5",
    "tavily-python>=0.7.13",
]
